# major-claw

./: .env.example  .gitignore  .majorclaw.instances.example.json  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  openclaw-drift.yml  release.yml  tauri-release.yml
apps/desktop-tauri/: README.md  package.json
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/icons/: icon.icns
apps/desktop-tauri/src-tauri/src/: commands.rs  main.rs
apps/desktop-web/: index.html  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
docs/: RELEASING.md  architecture.md  error-handling-strategy.md  mvp-scope.md  openclaw-compat-baseline.json  openclaw-gateway-pinned.snapshot.txt  placeholders-audit.md  quickstart.md  release-checklist.md  release-process.md  security-permissions.md  security-review-checklist.md  testing.md  walkthrough-script.md  ws-contract.md
e2e/config/: playwright.config.ts
e2e/fixtures/: criticalTest.ts  gatewayHarness.ts
e2e/tests/: 01-kanban-crud-bulk-undo.spec.ts  02-permissions-approval-flows.spec.ts  03-red-phone-lifecycle-stop-restart.spec.ts  04-vault-deposit-search-version.spec.ts  05-marketplace-install-path.spec.ts  06-onboarding-agent-create.spec.ts  07-agent-hierarchy-create-update-reorder.spec.ts  08-integrations-connect-assign.spec.ts  (+4 more)
scripts/: check-openclaw-compat-latest.mjs  e2e-doctor.mjs  openclaw-compat-check.mjs  refresh-openclaw-baseline.mjs  soak-test-checklist.md
(+59 files in other folders)
