[package]
name = "major-claw-desktop"
version = "0.1.0"
description = "Major Claw desktop host"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
urlencoding = "2"

